[package]
name = "step-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
rand = "0.9.0-alpha.1"
murmurhash32 = "0.3.1"
indexmap = "2.2.6"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

