[package]
name = "step-db"
version = "0.1.0"
edition = "2021"
authors = ["Kwin Wong <wonkung@163.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
rand = "0.9.0-alpha.1"
murmurhash32 = "0.3.1"
indexmap = "2.2.6"
memmap2 = "0.9.4"
anyhow = "1.0.86"
libc = "0.2.155"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]
